--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                             30분(시간 확인 중). Tag der Völker 합동미사, 총회 준비 사목회</a></li>
                     <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_2741/">11월 26일 오후 세시.
                             그리스도왕 대축일, 정기총회/재정보고</a></li>
-                    <li>12월 10일 오후 세시. 대림, 정기총회/재정보고</li>
+                    <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_2742/">12월 10일 오후 세시. 대림, 정기총회/재정보고</a></li>
                     <li>12월 24일 밤 10시. 성탄전야 합동미사</li>
                     <li>12월 25일 오후 세시. 주님성탄대축일미사, 성탄행사</li>
                     <li>2024년 1월 1일 오후 세시. 천주의 모친 성모마리아, 설</li>
