--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                 <p>©2023 스위스 취리히 한인 천주교회</p>
             </div>
             <div class="feature">
-                <p><a href="https://maria.catholic.or.kr/dictionary/bbs/bbs_view.asp?id=135640&ref=95&menu=4798">교무금</a> 납부계좌 koreanische katholische Kirchgemeinde Schweiz: IBAN CH8409000000855730112</p>
+                <p><a href="https://maria.catholic.or.kr/dictionary/bbs/bbs_view.asp?id=135640&ref=95&menu=4798">교무금</a> 납부계좌<br>koreanische katholische Kirchgemeinde Schweiz: IBAN CH8409000000855730112</p>
             </div>
             <div class="feature">
                 <p><a href="mailto:kkgs.ch@gmail.com">Technical support</a></p>
