--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                             style=" color:#c9c8cd; font-family:Arial,sans-serif; font-size:14px; line-height:17px; margin-bottom:0; margin-top:8px; overflow:hidden; padding:8px 0 7px; text-align:center; text-overflow:ellipsis; white-space:nowrap;">
                             <a href="https://www.instagram.com/p/CljwgsyjGtl/?utm_source=ig_embed&amp;utm_campaign=loading"
                                 style=" color:#c9c8cd; font-family:Arial,sans-serif; font-size:14px; font-style:normal; font-weight:normal; line-height:17px; text-decoration:none;"
-                                target="_blank">Ein Beitrag geteilt von 취리히 한인성당 Unofficial
+                                target="_blank">취리히 한인성당 Unofficial
                                 (@korean.catholic.zurich)</a>
                         </p>
                     </div>
