--- a/youtube.html
+++ b/youtube.html
@@ -9,10 +9,12 @@
 </head>
 
 <body>
-    <iframe src="https://www.youtube.com/embed/videoseries?list=PL0jc4rVF_Sxasj9Gfod0J6o7RJPW1tngO"
-        title="YouTube video player" frameborder="0"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-        allowfullscreen></iframe>
+    <div class="youtube-container">
+        <iframe src="https://www.youtube.com/embed/videoseries?list=PL0jc4rVF_Sxasj9Gfod0J6o7RJPW1tngO"
+            title="YouTube video player" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen></iframe>
+    </div>
 </body>
 
 </html>
