--- a/map.html
+++ b/map.html
@@ -9,9 +9,11 @@
 </head>
 
 <body>
+    <div class="google-maps">
     <iframe
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5213.913750185965!2d8.526763960097174!3d47.37328240620422!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xe75fb1d4001bf9da!2sKatholische%20Pfarrei%20St.%20Peter%20und%20Paul!5e0!3m2!1sen!2sch!4v1669822721866!5m2!1sen!2sch"
         style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
 </body>
 
 </html>
