--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
                     <dd>이영덕(李映德) 안토니오 신부님<br />
                         ☎️ <a href="tel:+41792042352">+41 79 204 23 52</a> (카카오톡)<br />
                         ✉️ <a href="mailto:theoantlee@gmail.com">theoantlee@gmail.com</a> <br />
-                        <a href="https://maria.catholic.or.kr/mi_pr/prayer/prayer.asp?pgubun=7&sgubun=w">고해성사</a>, <a href="https://maria.catholic.or.kr/dictionary/bbs/bbs_view.asp?id=173649&ref=185&menu=4798">미사지향</a>: 신부님께 신청하세요 <br />
+                        <a href="https://maria.catholic.or.kr/mi_pr/prayer/prayer.asp?pgubun=7&sgubun=w">고해성사</a>, <a
+                            href="https://maria.catholic.or.kr/dictionary/bbs/bbs_view.asp?id=173649&ref=185&menu=4798">미사지향</a>:
+                        신부님께 신청하세요 <br />
                         <a href="https://wa.me/41792042352">
                             <picture>
                                 <source srcset="images/whatsapp_dark.png" media="(prefers-color-scheme: dark)">
@@ -94,7 +96,8 @@
                             30분(시간 확인 중). Tag der Völker 합동미사, 총회 준비 사목회</a></li>
                     <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_2741/">11월 26일 오후 세시.
                             그리스도왕 대축일, 정기총회/재정보고</a></li>
-                    <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_2742/">12월 10일 오후 세시. 대림, 정기총회/재정보고</a></li>
+                    <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_2742/">12월 10일 오후 세시. 대림,
+                            정기총회/재정보고</a></li>
                     <li>12월 24일 밤 10시. 성탄전야 합동미사</li>
                     <li>12월 25일 오후 세시. 주님성탄대축일미사, 성탄행사</li>
                     <li>2024년 1월 1일 오후 세시. 천주의 모친 성모마리아, 설</li>
@@ -120,10 +123,12 @@
                     <dt>Zürich Bellevue에서</dt>
                     <dd>Heuried 방향, 9번 Tram, Werd 에서 하차</dd>
                 </dl>
-                <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5213.913750185965!2d8.526763960097174!3d47.37328240620422!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xe75fb1d4001bf9da!2sKatholische%20Pfarrei%20St.%20Peter%20und%20Paul!5e0!3m2!1sen!2sch!4v1669822721866!5m2!1sen!2sch"
-                    style="border:0;" allowfullscreen="" loading="lazy"
-                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <div class="google-maps">
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5213.913750185965!2d8.526763960097174!3d47.37328240620422!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xe75fb1d4001bf9da!2sKatholische%20Pfarrei%20St.%20Peter%20und%20Paul!5e0!3m2!1sen!2sch!4v1669822721866!5m2!1sen!2sch"
+                        style="border:0;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
 
                 <blockquote class="instagram-media" data-instgrm-captioned
                     data-instgrm-permalink="https://www.instagram.com/p/CqD4kuVtuRm/?utm_source=ig_embed&amp;utm_campaign=loading"
@@ -226,7 +231,8 @@
                 <p>©2023 스위스 취리히 한인 천주교회</p>
             </div>
             <div class="feature">
-                <p><a href="https://maria.catholic.or.kr/dictionary/bbs/bbs_view.asp?id=135640&ref=95&menu=4798">교무금</a> 납부계좌<br>koreanische katholische Kirchgemeinde Schweiz: IBAN CH8409000000855730112</p>
+                <p><a href="https://maria.catholic.or.kr/dictionary/bbs/bbs_view.asp?id=135640&ref=95&menu=4798">교무금</a>
+                    납부계좌<br>koreanische katholische Kirchgemeinde Schweiz: IBAN CH8409000000855730112</p>
             </div>
             <div class="feature">
                 <p><a href="mailto:kkgs.ch@gmail.com">Technical support</a></p>
