--- a/twitter.html
+++ b/twitter.html
@@ -6,9 +6,15 @@
     <meta name="google-site-verification" content="BuMtcDT7ZKJ9FP2TVZ34C8hhR6Y3KRU37GSsAosYgjk" />
     <title>취리히 한인성당, 스위스 취리히 한인 천주교회, Korean Catholic Mission, Koreanische Katholische Gemeinde in Zürich </title>
     <link rel='stylesheet' href='css/twitter.css'>
+    <script>window.setTimeout(function () {
+            $(".twitter-timeline").css("font-size", "30px");
+            $(".twitter-timeline").contents().css("font-size", "20px");
+        }, 1000);</script>
+
 </head>
 
 <body>
+
     <a class="twitter-timeline" data-lang="ko" data-tweet-limit="3"
         href="https://twitter.com/kkgs_ch?ref_src=twsrc%5Etfw">공지사항</a>
     <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
