justify text (left and right)

--- a/calendar.html
+++ b/calendar.html
@@ -9,19 +9,11 @@
 </head>
 
 <body>
+    <div class="google-cal">
     <iframe src="https://calendar.google.com/calendar/embed?src=kkgs.ch%40gmail.com&ctz=Europe%2FZurich"
         style="border: 0" frameborder="0" scrolling="no"></iframe>
-
-
-    <div class="responsiveCal">
-        <div class="deskContent"><iframe
-                src="https://calendar.google.com/calendar/embed?src=kkgs.ch%40gmail.com&ctz=Europe%2FZurich"
-                style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
-        </div>
-        <div class="phoneContent"><iframe
-                src="https://calendar.google.com/calendar/embed?src=kkgs.ch%40gmail.com&ctz=Europe%2FZurich"
-                style="border: 0" width="280" height="500" frameborder="0" scrolling="no"></iframe></div>
     </div>
+ 
 
 
 </body>
