--- a/index.html
+++ b/index.html
@@ -28,29 +28,23 @@
                 <dl id="homepage_info">
                     <dt>주임신부:</dt>
                     <dd>이영덕(李映德) 안토니오 신부님<br />
-                        ☎️ <a href="tel:+41792042352">+41 79 204 23 52</a> (카카오톡)<br />
-                        ✉️ <a href="mailto:theoantlee@gmail.com">theoantlee@gmail.com</a> <br />
-                        <a href="https://maria.catholic.or.kr/mi_pr/prayer/prayer.asp?pgubun=7&sgubun=w">고해성사</a>, <a
-                            href="https://maria.catholic.or.kr/dictionary/bbs/bbs_view.asp?id=173649&ref=185&menu=4798">미사지향</a>:
-                        신부님께 신청하세요 <br />
-                        <a href="https://wa.me/41792042352">
-                            <picture>
-                                <source srcset="images/whatsapp_dark.png" media="(prefers-color-scheme: dark)">
-                                <img src="images/whatsapp.png" alt="Chat on WhatsApp" class="button">
-                            </picture>
-                        </a>
+
                     </dd>
-
-
                 </dl>
-                <h3><a href="https://kkgs-ch.github.io/homily/">강론 말씀 모음</a> <br /></h3>
-
-                <a class="twitter-timeline" data-lang="ko" data-tweet-limit="3"
+                <ul>
+                    <li>📖 <a href="https://kkgs-ch.github.io/homily/">강론 말씀 모음</a></li>
+                    <li>🙏 <a href="https://maria.catholic.or.kr/mi_pr/prayer/prayer.asp?pgubun=7&sgubun=w">고해성사</a>,
+                        <a
+                            href="https://maria.catholic.or.kr/dictionary/bbs/bbs_view.asp?id=173649&ref=185&menu=4798">미사지향</a>:
+                        신부님께 신청하세요
+                    </li>
+                    <li>☎️ <a href="tel:+41792042352">+41 79 204 23 52</a> + 카카오톡 + <a
+                            href="https://wa.me/41792042352">WhatsApp</a></li>
+                    <li>✉️ <a href="mailto:theoantlee@gmail.com">theoantlee@gmail.com</a> </li>
+                </ul>
+                <a class="twitter-timeline" data-lang="ko" data-tweet-limit="2"
                     href="https://twitter.com/kkgs_ch?ref_src=twsrc%5Etfw">공지사항</a>
                 <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-
-
-                <h3><a href="https://kkgs-ch.github.io/notice/">공지 사항 모음</a> <br /></h3>
 
                 <iframe src="https://www.youtube.com/embed/videoseries?list=PL0jc4rVF_Sxasj9Gfod0J6o7RJPW1tngO"
                     title="YouTube video player" frameborder="0"
@@ -112,11 +106,13 @@
             </div>
             <div class="feature last">
                 <h2>찾아오시는 길</h2>
-                <p><b>미사 장소:</b> <a href="https://goo.gl/maps/BPAy4Th7NKGbBuE46">St. Peter und Paul, Werdstrasse 63,
-                        8004 Zürich, Schweiz</a><br>
-                    <b>아가페 장소:</b> <a href="https://goo.gl/maps/USAxqhXK6U5dSsYS9">회관, Werdgässchen 26, 8004 Zürich</a>
-
-                </p>
+                <dl>
+                    <dt>미사 장소</dt>
+                    <dd><a href="https://goo.gl/maps/BPAy4Th7NKGbBuE46">St. Peter und Paul, Werdstrasse 63,
+                            8004 Zürich, Schweiz</a></dd>
+                    <dt>미사 후 아가페 (식사와 친교) 장소</dt>
+                    <dd><a href="https://goo.gl/maps/USAxqhXK6U5dSsYS9">회관, Werdgässchen 26, 8004 Zürich</a></dd>
+                </dl>
                 <dl>
                     <dt>Zürich 중앙역 앞에서</dt>
                     <dd>Triemli 방향, 14번 Tram, Werd 에서 하차</dd>
