--- a/index.html
+++ b/index.html
@@ -214,8 +214,7 @@
                             style=" color:#c9c8cd; font-family:Arial,sans-serif; font-size:14px; line-height:17px; margin-bottom:0; margin-top:8px; overflow:hidden; padding:8px 0 7px; text-align:center; text-overflow:ellipsis; white-space:nowrap;">
                             <a href="https://www.instagram.com/p/CljwgsyjGtl/?utm_source=ig_embed&amp;utm_campaign=loading"
                                 style=" color:#c9c8cd; font-family:Arial,sans-serif; font-size:14px; font-style:normal; font-weight:normal; line-height:17px; text-decoration:none;"
-                                target="_blank">취리히 한인성당 Unofficial
-                                (@korean.catholic.zurich)</a>
+                                target="_blank">취리히 한인성당 (@korean.catholic.zurich)</a>
                         </p>
                     </div>
                 </blockquote>
@@ -227,14 +226,16 @@
                 <p>©2023 스위스 취리히 한인 천주교회</p>
             </div>
             <div class="feature">
-                <p><a href="https://maria.catholic.or.kr/dictionary/bbs/bbs_view.asp?id=135640&ref=95&menu=4798">교무금</a>
-                    납부계좌<br>koreanische katholische Kirchgemeinde Schweiz <br> IBAN CH8409000000855730112</p>
+                <p>
+                    <a
+                        href="https://maria.catholic.or.kr/dictionary/bbs/bbs_view.asp?id=135640&ref=95&menu=4798">교무금</a>
+                    납부계좌<br>koreanische katholische Kirchgemeinde Schweiz<br> IBAN CH8409000000855730112
+                </p>
             </div>
             <div class="feature">
                 <p><a href="mailto:kkgs.ch@gmail.com">Technical support</a></p>
             </div>
         </div>
-
 </body>
 
 </html>
