--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
                             href="https://maria.catholic.or.kr/dictionary/bbs/bbs_view.asp?id=173649&ref=185&menu=4798">미사지향</a>:
                         신부님께 신청하세요
                     </li>
-                    <li>☎️ <a href="tel:+41792042352">+41 79 204 23 52</a> + 카카오톡 + <a
-                            href="https://wa.me/41792042352">WhatsApp</a></li>
+                    <li>☎️ <a href="tel:+41792042352">+41 79 204 23 52</a> 카톡 <a
+                            href="https://wa.me/41792042352">왓츠앱</a></li>
                     <li>✉️ <a href="mailto:theoantlee@gmail.com">theoantlee@gmail.com</a> </li>
                 </ul>
                 <a class="twitter-timeline" data-lang="ko" data-tweet-limit="2"
