--- a/index.html
+++ b/index.html
@@ -59,46 +59,47 @@
 
             </div>
             <div class="feature">
-                <h2><a href="schedule/2023.png">미사 일정</a>: 대체로 2, 4째주 주일 오후 3시 </h2>
+                <dl>
+                    <dt><a href="schedule/2023.png"></a>미사 일정</a></dt>
+                    <dd>대체로 2, 4째주 주일 오후 3시</dd>
+
+                </dl>
 
                 <ul>
-                    <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_2731">5월 14일 오후 세시.
+                    <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_2731">5월 14일 3pm
                             부활</a></li>
                     <li>5월 20일 어린이 피정</li>
-                    <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_2732">5월 28일 오후 세시.
+                    <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_2732">5월 28일 3pm
                             성령강림대축일</a></li>
-                    <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_2733">6월 11일 오후 세시. 그리스도의
+                    <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_2733">6월 11일 3pm 그리스도의
                             성체성혈 대축일</a></li>
-                    <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_2734">6월 25일 오후 세시.
+                    <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_2734">6월 25일 3pm
                             연중</a></li>
-                    <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_2629">7월 2일 오전 9:30.
+                    <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_2629">7월 2일 <i>오전 9:30</i>
                             주보성인축일행사</a></li>
-                    <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_2735">7월 16일 오후 세시.
+                    <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_2735">7월 16일 3pm
                             연중</a></li>
-                    <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_2736">7월 30일 오후 세시.
+                    <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_2736">7월 30일 3pm
                             연중</a></li>
-                    <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_2737">8월 20일 오후 세시.
+                    <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_2737">8월 20일 3pm
                             연중</a></li>
-                    <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_2738">9월 10일 오후 세시.
+                    <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_2738">9월 10일 3pm
                             연중</a></li>
-                    <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_2739">10월 1일 오후 세시.
+                    <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_2739">10월 1일 3pm
                             한가위대축일</a></li>
                     <li>10월 8-10일 성인 피정</li>
-                    <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_2740">10월 22일 오후 세시.
+                    <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_2740">10월 22일 3pm
                             연중</a></li>
-                    <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_2647/">11월 5일 오전 9시
-                            30분(시간 확인 중). Tag der Völker 합동미사, 총회 준비 사목회</a></li>
-                    <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_2741/">11월 26일 오후 세시.
+                    <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_2647/">11월 5일 <i>오전 9:30 (시간 확인 중).</i><br> Tag der Völker 합동미사, 총회 준비 사목회</a></li>
+                    <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_2741/">11월 26일 3pm <br>
                             그리스도왕 대축일, 정기총회/재정보고</a></li>
-                    <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_2742/">12월 10일 오후 세시. 대림,
+                    <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_2742/">12월 10일 3pm 대림,
                             정기총회/재정보고</a></li>
-                    <li>12월 24일 밤 10시. 성탄전야 합동미사</li>
-                    <li>12월 25일 오후 세시. 주님성탄대축일미사, 성탄행사</li>
-                    <li>2024년 1월 1일 오후 세시. 천주의 모친 성모마리아, 설</li>
+                    <li>12월 24일 <i>밤 10시</i> 성탄전야 합동미사</li>
+                    <li>12월 25일 3pm 주님성탄대축일미사, 성탄행사</li>
+                    <li>2024년 1월 1일 3pm 천주의 모친 성모마리아, 설</li>
                 </ul>
-                <a href="https://calendar.google.com/calendar/u/0/r?cid=kkgs.ch@gmail.com">구글 달력에 저장하기</a>
-
-
+                <a href="https://calendar.google.com/calendar/u/0/r?cid=kkgs.ch@gmail.com">구글 달력에 저장하기</a> 
                 <iframe src="https://calendar.google.com/calendar/embed?src=kkgs.ch%40gmail.com&ctz=Europe%2FZurich"
                     style="border: 0" frameborder="0" scrolling="no"></iframe>
 
