--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                 </p>
             </div>
             <div class="feature">
-                <p><a href="mailto:kkgs.ch@gmail.com">Technical support</a></p>
+                <p><a href="mailto:kkgs.ch@gmail.com">Technical support 홈페이지 관리자</a></p>
             </div>
         </div>
 </body>
