--- a/index.html
+++ b/index.html
@@ -20,11 +20,7 @@
 
     <div id="container" class="homepage">
         <div class="box">
-            <div class="feature">
-                <p><strong>스위스 취리히 한인 천주교회<br>
-                        Korean Catholic Mission Switzerland <br>
-                        Koreanische Katholische Gemeinde in Zürich</strong>
-                </p>
+            <div class="feature">  
                 <dl id="homepage_info">
                     <dt>주임신부:</dt>
                     <dd>이영덕(李映德) 안토니오 신부님<br />
@@ -36,7 +32,7 @@
                     <li>🙏 <a href="https://maria.catholic.or.kr/mi_pr/prayer/prayer.asp?pgubun=7&sgubun=w">고해성사</a>,
                         <a
                             href="https://maria.catholic.or.kr/dictionary/bbs/bbs_view.asp?id=173649&ref=185&menu=4798">미사지향</a>:
-                        신부님께 신청하세요
+                        신부님께 직접 문의하세요
                     </li>
                     <li>☎️ <a href="tel:+41792042352">+41 79 204 23 52</a> 카톡 <a
                             href="https://wa.me/41792042352">왓츠앱</a></li>
@@ -60,7 +56,7 @@
             </div>
             <div class="feature">
                 <dl>
-                    <dt><a href="schedule/2023.png"></a>미사 일정</a></dt>
+                    <dt><a href="schedule/2023.png">미사 일정</a></dt>
                     <dd>대체로 2, 4째주 주일 오후 3시</dd>
 
                 </dl>
@@ -68,7 +64,7 @@
                 <ul>
                     <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_2731">5월 14일 3pm
                             부활</a></li>
-                    <li>5월 20일 어린이 피정</li>
+                    <li>5월 20일 어린이 피정 + 성지순례 @ Kapelle Jonental</li>
                     <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_2732">5월 28일 3pm
                             성령강림대축일</a></li>
                     <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_2733">6월 11일 3pm 그리스도의
@@ -87,7 +83,7 @@
                             연중</a></li>
                     <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_2739">10월 1일 3pm
                             한가위대축일</a></li>
-                    <li>10월 8-10일 성인 피정</li>
+                    <li>10월 8-10일 성인 피정 @ Flüeli-Ranft</li>
                     <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_2740">10월 22일 3pm
                             연중</a></li>
                     <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_2647/">11월 5일 <i>오전 9:30 (시간 확인 중).</i><br> Tag der Völker 합동미사, 총회 준비 사목회</a></li>
@@ -105,8 +101,7 @@
 
 
             </div>
-            <div class="feature last">
-                <h2>찾아오시는 길</h2>
+            <div class="feature last"> 
                 <dl>
                     <dt>미사 장소</dt>
                     <dd><a href="https://goo.gl/maps/BPAy4Th7NKGbBuE46">St. Peter und Paul, Werdstrasse 63,
