--- a/index.html
+++ b/index.html
@@ -20,15 +20,14 @@
 
     <div id="container" class="homepage">
         <div class="box">
-            <div class="feature">  
+            <div class="feature">
                 <dl id="homepage_info">
-                    <dt>주임신부:</dt>
-                    <dd>이영덕(李映德) 안토니오 신부님<br />
-
+                    <dt>주임신부</dt>
+                    <dd>이영덕(李映德) 안토니오 신부님
                     </dd>
                 </dl>
                 <ul>
-                    <li>📖 <a href="https://kkgs-ch.github.io/homily/">강론 말씀 모음</a></li>
+                    <li>📖 <a href="https://kkgs-ch.github.io/homily/">미사 강론 말씀 모음</a></li>
                     <li>🙏 <a href="https://maria.catholic.or.kr/mi_pr/prayer/prayer.asp?pgubun=7&sgubun=w">고해성사</a>,
                         <a
                             href="https://maria.catholic.or.kr/dictionary/bbs/bbs_view.asp?id=173649&ref=185&menu=4798">미사지향</a>:
@@ -38,7 +37,7 @@
                             href="https://wa.me/41792042352">왓츠앱</a></li>
                     <li>✉️ <a href="mailto:theoantlee@gmail.com">theoantlee@gmail.com</a> </li>
                 </ul>
-                <a class="twitter-timeline" data-lang="ko" data-tweet-limit="2"
+                <a class="twitter-timeline" data-lang="ko" data-tweet-limit="3"
                     href="https://twitter.com/kkgs_ch?ref_src=twsrc%5Etfw">공지사항</a>
                 <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
@@ -46,19 +45,11 @@
                     title="YouTube video player" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                     allowfullscreen></iframe>
-
-
-
-
-                <script async src="//www.instagram.com/embed.js"></script>
-
-
             </div>
             <div class="feature">
                 <dl>
                     <dt><a href="schedule/2023.png">미사 일정</a></dt>
                     <dd>대체로 2, 4째주 주일 오후 3시</dd>
-
                 </dl>
 
                 <ul>
@@ -71,7 +62,8 @@
                             성체성혈 대축일</a></li>
                     <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_2734">6월 25일 3pm
                             연중</a></li>
-                    <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_2629">7월 2일 <i>오전 9:30</i>
+                    <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_2629">7월 2일 <i>오전
+                                9:30</i>
                             주보성인축일행사</a></li>
                     <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_2735">7월 16일 3pm
                             연중</a></li>
@@ -86,7 +78,8 @@
                     <li>10월 8-10일 성인 피정 @ Flüeli-Ranft</li>
                     <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_2740">10월 22일 3pm
                             연중</a></li>
-                    <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_2647/">11월 5일 <i>오전 9:30 (시간 확인 중).</i><br> Tag der Völker 합동미사, 총회 준비 사목회</a></li>
+                    <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_2647/">11월 5일 <i>오전 9:30
+                                (시간 확인 중).</i><br> Tag der Völker 합동미사, 총회 준비 사목회</a></li>
                     <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_2741/">11월 26일 3pm <br>
                             그리스도왕 대축일, 정기총회/재정보고</a></li>
                     <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_2742/">12월 10일 3pm 대림,
@@ -95,13 +88,13 @@
                     <li>12월 25일 3pm 주님성탄대축일미사, 성탄행사</li>
                     <li>2024년 1월 1일 3pm 천주의 모친 성모마리아, 설</li>
                 </ul>
-                <a href="https://calendar.google.com/calendar/u/0/r?cid=kkgs.ch@gmail.com">구글 달력에 저장하기</a> 
+                <a href="https://calendar.google.com/calendar/u/0/r?cid=kkgs.ch@gmail.com">구글 달력에 저장하기</a>
                 <iframe src="https://calendar.google.com/calendar/embed?src=kkgs.ch%40gmail.com&ctz=Europe%2FZurich"
                     style="border: 0" frameborder="0" scrolling="no"></iframe>
 
 
             </div>
-            <div class="feature last"> 
+            <div class="feature last">
                 <dl>
                     <dt>미사 장소</dt>
                     <dd><a href="https://goo.gl/maps/BPAy4Th7NKGbBuE46">St. Peter und Paul, Werdstrasse 63,
@@ -122,6 +115,7 @@
                         referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
 
+                <script async src="//www.instagram.com/embed.js"></script>
                 <blockquote class="instagram-media" data-instgrm-captioned
                     data-instgrm-permalink="https://www.instagram.com/p/CqD4kuVtuRm/?utm_source=ig_embed&amp;utm_campaign=loading"
                     data-instgrm-version="14" style=" background:#FFF; border:0;border-radius:3px; box-shadow:0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); 
@@ -219,7 +213,10 @@
 
         <div id="footer" class="box">
             <div class="feature">
-                <p>©2023 스위스 취리히 한인 천주교회</p>
+                <p>©2023 스위스 취리히 한인 천주교회<br>
+                    Korean Catholic Mission Switzerland <br>
+                    Koreanische Katholische Gemeinde in Zürich
+                </p>
             </div>
             <div class="feature">
                 <p>
