--- a/index.html
+++ b/index.html
@@ -226,7 +226,8 @@
                 </p>
             </div>
             <div class="feature">
-                <p><a href="mailto:kkgs.ch@gmail.com">Technical support 홈페이지 관리자</a></p>
+                <p>Webmaster & Technical support <br> 홈페이지 관리 및 기술 지원 <br>
+                    <a href="mailto:kkgs.ch@gmail.com">kkgs.ch@gmail.com</a></p>
             </div>
         </div>
 </body>
