--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div id="logo">
             <picture>
                 <source srcset="images/logo_dark.png" media="(prefers-color-scheme: dark)">
-                <img src="images/logo.png" class="logo">
+                <img src="images/logo.png" class="kkgs-logo">
             </picture>
         </div>
     </div>
@@ -37,10 +37,11 @@
                             href="https://wa.me/41792042352">왓츠앱</a></li>
                     <li>✉️ <a href="mailto:theoantlee@gmail.com">theoantlee@gmail.com</a> </li>
                 </ul>
-                <a class="twitter-timeline" data-lang="ko" data-tweet-limit="3"
-                    href="https://twitter.com/kkgs_ch?ref_src=twsrc%5Etfw">공지사항</a>
-                <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-
+                <div id="twitter-container">
+                    <a class="twitter-timeline" data-lang="ko" data-tweet-limit="3"
+                        href="https://twitter.com/kkgs_ch?ref_src=twsrc%5Etfw">공지사항</a>
+                    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                </div>
                 <iframe src="https://www.youtube.com/embed/videoseries?list=PL0jc4rVF_Sxasj9Gfod0J6o7RJPW1tngO"
                     title="YouTube video player" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -227,7 +228,8 @@
             </div>
             <div class="feature">
                 <p>Webmaster & Technical support <br> 홈페이지 관리 및 기술 지원 <br>
-                    <a href="mailto:kkgs.ch@gmail.com">kkgs.ch@gmail.com</a></p>
+                    <a href="mailto:kkgs.ch@gmail.com">kkgs.ch@gmail.com</a>
+                </p>
             </div>
         </div>
 </body>
