--- a/index.html
+++ b/index.html
@@ -76,14 +76,12 @@
                     <li>10월 8-10일 성인 피정 @ Flüeli-Ranft</li>
                     <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_2740">10월 22일 3pm
                             연중</a></li>
-                    <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_2647/">11월 5일 <i>오전 9:30
-                                (시간 확인 중).</i><br> Tag der Völker 합동미사, 총회 준비 사목회</a></li>
+                    <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_2647/">11월 5일 <i>오전 9:30</i><br> Tag der Völker 합동미사, 총회 준비 사목회</a></li>
                     <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_2741/">11월 26일 3pm <br>
                             그리스도왕 대축일, 정기총회/재정보고</a></li>
                     <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_2742/">12월 10일 3pm 대림,
                             정기총회/재정보고</a></li>
-                    <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_2654/">
-12월 24일 <i>오전 9:30 (시간 확인 중).</i> 성탄전야 합동미사</a></li>
+                    <li>12월 24일 <i>밤 10시</i> 성탄전야 합동미사</li>
                     <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_2743/">12월 25일 3pm 주님성탄대축일미사, 성탄행사</a></li>
                     <li>2024년 1월 1일 3pm 천주의 모친 성모마리아, 설</li>
                 </ul>
