--- a/index.html
+++ b/index.html
@@ -54,10 +54,6 @@
                 </dl>
 
                 <ul>
-                    <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_2733">6월 11일 3pm 그리스도의
-                            성체성혈 대축일</a></li>
-                    <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_2734">6월 25일 3pm
-                            연중</a></li>
                     <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_2629">7월 2일 <i>오전
                                 9:30</i>
                             주보성인축일행사</a></li>
@@ -84,6 +80,7 @@
                     <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_2744/">2024년 1월 1일 3pm 천주의 모친 성모마리아, 설</a></li>
                 </ul>
                 <a href="https://calendar.google.com/calendar/u/0/r?cid=kkgs.ch@gmail.com">구글 달력에 저장하기</a>
+                <a href="https://kkgs-ch.github.io/schedule/kkgs.ch@gmail.com.ics">iCal(iPhone) 또는 Outlook 달력에 저장하기 (ics)</a>
                 <iframe src="https://calendar.google.com/calendar/embed?src=kkgs.ch%40gmail.com&ctz=Europe%2FZurich"
                     style="border: 0" frameborder="0" scrolling="no"></iframe>
 
