--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <meta charset="utf-8">
     <meta name="google-site-verification" content="BuMtcDT7ZKJ9FP2TVZ34C8hhR6Y3KRU37GSsAosYgjk" />
     <title>취리히 한인성당, 스위스 취리히 한인 천주교회, Korean Catholic Mission, Koreanische Katholische Gemeinde in Zürich </title>
-    <link rel='stylesheet' href='css/style.css'>
+    <link rel='stylesheet' href='https://kkgs-ch.github.io/css/style.css'>
 </head>
 
 <body>
     <div id="header">
         <div id="logo">
             <picture>
-                <source srcset="images/logo_dark.png" media="(prefers-color-scheme: dark)">
-                <img src="images/logo.png" class="kkgs-logo">
+                <source srcset="https://kkgs-ch.github.io/images/logo_dark.png" media="(prefers-color-scheme: dark)">
+                <img src="https://kkgs-ch.github.io/images/logo.png" class="kkgs-logo">
             </picture>
         </div>
     </div>
@@ -49,7 +49,7 @@
             </div>
             <div class="feature">
                 <dl>
-                    <dt><a href="schedule/2023.png">미사 일정</a></dt>
+                    <dt><a href="https://kkgs-ch.github.io/schedule/2023.png">미사 일정</a></dt>
                     <dd>대체로 2, 4째주 주일 오후 3시</dd>
                 </dl>
 
@@ -79,8 +79,9 @@
                     <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_2743/">12월 25일 3pm 주님성탄대축일미사, 성탄행사</a></li>
                     <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_2744/">2024년 1월 1일 3pm 천주의 모친 성모마리아, 설</a></li>
                 </ul>
-                <a href="https://calendar.google.com/calendar/u/0/r?cid=kkgs.ch@gmail.com">구글 달력에 저장하기</a>
-                <a href="https://kkgs-ch.github.io/schedule/kkgs.ch@gmail.com.ics">iCal(iPhone) 또는 Outlook 달력에 저장하기 (ics)</a>
+                미사일정 모두 저장하기: 
+                <a href="https://calendar.google.com/calendar/u/0/r?cid=kkgs.ch@gmail.com">구글달력</a> 
+                <a href="https://kkgs-ch.github.io/schedule/kkgs.ch@gmail.com.ics">아이폰</a>
                 <iframe src="https://calendar.google.com/calendar/embed?src=kkgs.ch%40gmail.com&ctz=Europe%2FZurich"
                     style="border: 0" frameborder="0" scrolling="no"></iframe>
 
